adicionei um paragráfo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam rem eveniet architecto omnis fugiat sequi dicta, eaque sint perferendis ipsum reiciendis ad ducimus porro nesciunt quis est nam iure labore!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum harum ratione aperiam officia excepturi nostrum sunt totam tempore adipisci asperiores sit nobis quisquam atque earum, eveniet eligendi ipsa hic accusamus?</p>
 </body>
 </html>
